--- a/.env.sample
+++ b/.env.sample
@@ -8,8 +8,8 @@ BRAVE_API_KEY=your_brave_api_key_here
 
 # MCPサーバーがリッスンするポート番号 (任意、デフォルト: 3005)
 # docker-compose.yml とサーバー内部の両方で使用されます。
-PORT=3005
+BRAVE_PORT=3005
 
 # Docker コンテナの再起動ポリシー (任意、デフォルト: unless-stopped)
 # 有効な値: no, on-failure, always, unless-stopped
-RESTART_POLICY=unless-stopped
+BRAVE_RESTART_POLICY=unless-stopped
